@@ -25,9 +25,10 @@ flowchart LR
     mcp --> solr["Solr<br/>/select · /update · ..."]
 ```
 
-**Profiles select how this client *reaches* the Solr MCP server, never how it serves its own API** —
-which is why they are all prefixed `mcp-`. It is the same REST service on the same port in every
-profile.
+**The `mcp-*` profiles select how this client *reaches* the Solr MCP server; the single `cli`
+profile selects what it serves** — an interactive terminal shell instead of the REST API. The two
+axes compose (`cli,mcp-http` is one application reached two ways); without `cli` it is the same
+REST service on the same port in every profile.
 
 | | |
 | --- | --- |
@@ -115,6 +116,48 @@ java -jar build/libs/solr-mcp-client-0.0.1-SNAPSHOT.jar --spring.profiles.active
 `mcp-stdio` is a **default** profile, not an active one: naming any profile explicitly *replaces*
 it. There is no "no transport" fallback — see
 [Startup verification](docs/transports.md#startup-verification).
+
+---
+
+## Interactive shell (`cli` profile)
+
+The `cli` profile replaces the web server with a Spring Shell REPL over the same assistant — same
+MCP tools, same conversation memory, no HTTP. It composes with any of the three transports, and
+must always be composed (activating `cli` alone would also replace the `mcp-stdio` default):
+
+```bash
+# The flag silences the JEP 498 JVM stderr warning from protobuf-java (OTLP exporter), which no
+# logging property can reach and which has no manifest equivalent. The JEP 472 native-access
+# warning from JLine's FFM terminal provider needs no flag: the jar's manifest carries
+# Enable-Native-Access: ALL-UNNAMED (see build.gradle.kts).
+java --sun-misc-unsafe-memory-access=allow -jar build/libs/solr-mcp-client-0.0.1-SNAPSHOT.jar --spring.profiles.active=cli,mcp-stdio
+java --sun-misc-unsafe-memory-access=allow -jar build/libs/solr-mcp-client-0.0.1-SNAPSHOT.jar --spring.profiles.active=cli,mcp-stdio-docker
+java --sun-misc-unsafe-memory-access=allow -jar build/libs/solr-mcp-client-0.0.1-SNAPSHOT.jar --spring.profiles.active=cli,mcp-http
+
+# or through Gradle (stdin and both warning-suppression flags are wired into bootRun)
+./gradlew bootRun --console=plain --args='--spring.profiles.active=cli,mcp-stdio'
+```
+
+At the prompt, the question is one quoted argument (unquoted words would be re-joined with
+commas by the shell's argument conversion):
+
+```
+solr-mcp "how many documents are in the books collection"
+solr-mcp "and how many of those are in stock" # follow-ups continue the conversation
+new                                           # forget the conversation, start fresh
+help                                          # everything else Spring Shell offers
+exit
+```
+
+One conversation spans the shell session; `new` releases it and starts another. Unlike the REST
+service, the shell needs the model key at first use in the terminal that runs it.
+
+The shell runs on Spring Shell's JLine runner (the `-ffm` starter flavor), so it also works in a
+non-PTY console — an IDE run configuration's output window included — by falling back to a JLine
+*dumb terminal*: prompt and input work, at the cost of line editing, history and colors. A real
+terminal (or the IDE's Terminal tab) gives the full experience. IDE run configurations build their
+own JVM command line, so add the two flags above to their VM options to keep the console clean —
+the flags wired into `bootRun` do not apply there.
 
 ---
 
